<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tagihanlistrik.ysn.views.ui.about.AboutActivity">

    <ImageView
        android:id="@+id/image_view_logo_app_activity_about"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/image_view_logo_app"
        android:src="@drawable/ic_logo_app" />

    <TextView
        android:id="@+id/text_view_app_name_activity_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_logo_app_activity_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_app_version_name_activity_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_app_name_activity_about"
        android:layout_centerHorizontal="true"
        android:text="@string/app_version"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_about_developer_activity_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright_u00a9_2018" />

</RelativeLayout>
