<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_container_item_bill_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    >

    <TextView
        android:id="@+id/text_view_customer_name_item_bill_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/text_view_total_bill_item_bill_history"
        android:layout_toStartOf="@+id/text_view_total_bill_item_bill_history"
        android:text="@string/customer_id"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_period_item_bill_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_customer_name_item_bill_history"
        android:layout_toLeftOf="@+id/text_view_total_bill_item_bill_history"
        android:layout_toStartOf="@+id/text_view_total_bill_item_bill_history"
        android:text="@string/bill_period"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_view_total_bill_item_bill_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/example_bill_value"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>
