<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="56dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_data_pelanggan_panel_data_tagihan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="11dp"
                    android:text="@string/bill_details"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_number"
                    android:textColor="@color/colorSubText"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_view_value_nomor_pelanggan_panel_data_tagihan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/unknown"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_name"
                    android:textColor="@color/colorSubText"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_view_value_nama_pelanggan_panel_data_tagihan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/unknown"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_period"
                    android:textColor="@color/colorSubText"
                    android:textSize="15sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_value_periode_tagihan_panel_data_tagihan"
                    android:layout_marginBottom="9dp"
                    android:text="@string/unknown"
                    android:textColor="@color/colorText"
                    android:textSize="15sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill"
                    android:textColor="@color/colorSubText"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_view_value_tagihan_panel_data_tagihan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/unknown"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin_fee"
                    android:textColor="@color/colorSubText"
                    android:textSize="15sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_value_biaya_admin_panel_data_tagihan"
                    android:layout_marginBottom="9dp"
                    android:text="@string/unknown"
                    android:textColor="@color/colorText"
                    android:textSize="15sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_bill"
                    android:textColor="@color/colorSubText"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_view_value_total_tagihan_panel_data_tagihan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:text="@string/unknown"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSubText"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    >

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_simpan_panel_data_tagihan"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:text="@string/simpan"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:paddingTop="9dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="9dp"
                        android:paddingLeft="10dp"
                        android:layout_toLeftOf="@+id/button_batal_panel_data_tagihan"
                        android:layout_toStartOf="@+id/button_batal_panel_data_tagihan"
                        android:background="@drawable/background_button_simpan_tagihan"
                        />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_batal_panel_data_tagihan"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:text="@string/batal"
                        android:textSize="15sp"
                        android:textColor="@color/colorPrimary"
                        android:paddingTop="9dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="9dp"
                        android:paddingLeft="10dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:background="@drawable/background_button_simpan_tagihan"
                        />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>